--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "module": "./dist/esm/index.js",
   "scripts": {
     "clean": "rm -rf ./dist/*",
-    "build:cjs": "tsc --build ./tsconfig.cjs.json",
-    "build:esm": "tsc --build ./tsconfig.esm.json",
+    "build:cjs": "tsc --build ./tsconfig.cjs.json && copy-declaration-ts ./src ./dist/cjs",
+    "build:esm": "tsc --build ./tsconfig.esm.json && copy-declaration-ts ./src ./dist/esm",
     "build": "npm run clean && npm run build:cjs && npm run build:esm",
     "test": "jest"
   },
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.16",
+    "@webcarrot/copy-declaration-ts": "^1.0.0",
     "jest": "^24.8.0",
     "ts-jest": "^24.0.2",
     "typescript": "^3.5.3"
